--- a/.chezmoiscripts/run_once_install-packages-linux.sh.tmpl
+++ b/.chezmoiscripts/run_once_install-packages-linux.sh.tmpl
@@ -158,7 +158,7 @@ install_eza() {
   {
     sudo mkdir -p /etc/apt/keyrings &&
     wget -qO- https://raw.githubusercontent.com/eza-community/eza/main/deb.asc | sudo gpg --dearmor -o /etc/apt/keyrings/gierens.gpg &&
-    echo "deb [signed-by=/etc/apt/keyrings/gierens.gpg] http://deb.gierens.de stable main" | sudo tee /etc/apt/sources.list.d/gierens.list &&
+    echo "deb [signed-by=/etc/apt/keyrings/gierens.gpg] https://deb.gierens.de stable main" | sudo tee /etc/apt/sources.list.d/gierens.list &&
     sudo chmod 644 /etc/apt/keyrings/gierens.gpg /etc/apt/sources.list.d/gierens.list &&
     sudo apt update -y &&
     sudo apt install -y eza &&
